# axia-scale-codec

./: CHANGELOG.md  Cargo.toml  README.md
benches/: benches.rs
derive/: Cargo.toml
derive/src/: decode.rs  encode.rs  lib.rs  max_encoded_len.rs  trait_bounds.rs  utils.rs
fuzzer/: Cargo.toml
fuzzer/src/: main.rs
src/: bit_vec.rs  codec.rs  compact.rs  depth_limit.rs  encode_append.rs  encode_like.rs  lib.rs
tests/: chain-error.rs  max_encoded_len.rs  mod.rs
tests/max_encoded_len_ui/: crate_str.stderr  missing_crate_specifier.stderr
