[package]
name = "axia-scale-codec-derive"
description = "Serialization and deserialization derive macro for AXIA SCALE Codec"
version = "2.0.0"
authors = ["AXIA Technologies <sankar.boro@zeeve.io>"]
license = "Apache-2.0"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.8", features = [ "full", "visit" ] }
quote = "1.0.2"
proc-macro2 = "1.0.6"
proc-macro-crate = "0.1.4"

[dev-dependencies]
axia-scale-codec = { path = "..", version = "2.0.0" }
