[package]
name = "axia-scale-codec-derive"
description = "Serialization and deserialization derive macro for AXIA SCALE Codec"
version = "2.2.0-rc.2"
authors = ["AXIA Technologies <admin@axiacoin.network>"]
license = "Apache-2.0"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.8", features = ["full", "visit"] }
quote = "1.0.2"
proc-macro2 = "1.0.6"
proc-macro-crate = "1.0.0"

[dev-dependencies]
axia-scale-codec = { path = ".." }
