[package]
name = "codec-fuzzer"
version = "0.1.0"
authors = ["AXIA Technologies <sankar.boro@zeeve.io>", "Vincent Ulitzsch <vincent@srlabs.de>"]
edition = "2018"
publish = false

[dependencies]
axia-scale-codec = { git = "https://github.com/axia-tech/axia-scale-codec", branch = "v2.3.1", version = "2.3.1", features = ["derive", "bit-vec", "fuzz"] }
honggfuzz = "0.5.54"
arbitrary = { version = "1.0.1", features = ["derive"] }
bitvec = { version = "0.20.1", features = ["alloc"] }
